# is-cpp-ProductsList

./: README.md
Client/: CMakeLists.txt  Client.cpp  Client.h  ClientQt5.cpp  ClientQt5.h  JsonParser.cpp  JsonParser.h  ProductListItem.cpp  ProductListItem.h  Request.cpp  Request.h  ResponseHandler.cpp  ResponseHandler.h  UserActivityHandler.cpp  UserActivityHandler.h  WindowSetup.cpp  WindowSetup.h  main.cpp
ClientTesting/: CMakeLists.txt  MainWindowTesting.cpp  MainWindowTesting.h
Server/: CMakeLists.txt  JsonParser.cpp  JsonParser.h  NewServer.cpp  NewServer.h  ProductListItem.cpp  ProductListItem.h  Request.cpp  Request.h  RequestsHandler.cpp  RequestsHandler.h  Server.cpp  Server.h  Session.cpp  Session.h  Storage.cpp  Storage.h  User.cpp  User.h  main.cpp
ServerTesting/: CMakeLists.txt  JsonParserTesting.cpp
Testing/: CMakeLists.txt  MainWindowTesting.cpp  MainWindowTesting.h  StorageTesting.cpp  main.cpp
